# edgeloop

./: .coderabbit.yaml  .cursorrules  .dockerignore  .editorconfig  .env.example  .eslintrc.boundaries.js  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  .replit  .singularity_plan.md  .vercel-ignore-check  3D_COMPONENTS.md  BETTING_SYSTEM_COMPLETE.md  BOUNDARIES.md  CHANGELOG.md  CODERABBIT_WINDOWS_WORKAROUNDS.md  CODE_REVIEW_VALIDATION.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DESIGN_SYSTEM.md  Dockerfile  EDGELOOP_SYSTEM_DOCUMENTATION.md  GITHUB_ACTIONS_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  Justfile  LICENSE  MIGRATION.md  MIGRATION_VERIFICATION.md  NEXTJS_MIGRATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_README.md  QUANTITATIVE_SYSTEM.md  (+45 more)
.claude/: ARCHITECTURE.md  QUICKSTART.md  README.md  SUMMARY.md  claude_desktop_config.json  settings.local.json
.config/: README.md
.config-reference/: index.md
.cursor/agents/: hive-overseer.md
.github/: BRANCH_PROTECTION.md  DEPLOYMENT_SETUP.md  SETUP.md  WORKFLOWS.md
.github/agents/: Vercel-Workflow -Guard.md  Vercel_Workflow _Guard.md  ci-triage.agent  ci-triage.agent.md  dependency-hygiene.agent.md  singularity-agent.md
.github/instructions/: *.instructions.md
.github/workflows/: aio-autofix-performance.yml  ci-enhanced.yml  ci.yml  codeql.yml  coderabbit-review.yml  dependency-review.yml  deploy-railway.yml  deploy-vercel.yml  e2e-tests.yml  lighthouse.yml  release.yml  tests.yml  update-deps.yml  verify-commits.yml
.husky/: commit-msg  pre-commit
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  routes-manifest.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  config.json
.next/server/: server-reference-manifest.json
.next/standalone/: package.json  server.js
.next/types/: routes.d.ts  validator.ts
.turbo/cache/: 06ae7a46f40f3887-meta.json  06ae7a46f40f3887.tar.zst  18e84fa00b1afc7a-meta.json  1e6efbbba5ac043f-meta.json  1e6efbbba5ac043f.tar.zst  3a67d3a85138cef6-meta.json  3a67d3a85138cef6.tar.zst  41edaaa68faecc14-meta.json  41edaaa68faecc14.tar.zst  457de8a0697e221b-meta.json  457de8a0697e221b.tar.zst  4e2b5efc3d1b98a0-meta.json  4e2b5efc3d1b98a0.tar.zst  5ba60866d20f7036-meta.json  66645226b7ab1507-meta.json  66645226b7ab1507.tar.zst  85f1ba8d6ebf0b8a-meta.json  85f1ba8d6ebf0b8a.tar.zst  8acb77695774d7a7-meta.json  8acb77695774d7a7.tar.zst  8bfba0d74df4a503-meta.json  8bfba0d74df4a503.tar.zst  a56eb85f564520e6-meta.json  a56eb85f564520e6.tar.zst  acabf2ec41bd2aa2-meta.json  acabf2ec41bd2aa2.tar.zst  be329ab3b8171bbb-meta.json  be329ab3b8171bbb.tar.zst  c6865be201c0c8d7-meta.json  c6865be201c0c8d7.tar.zst  d6674cee6cad1940-meta.json  edb3b8e204acc9f4-meta.json  edb3b8e204acc9f4.tar.zst  f60d0420e89359fd-meta.json  f60d0420e89359fd.tar.zst  fd4841a60da8b801-meta.json  fd4841a60da8b801.tar.zst
__tests__/: betting.test.ts  engine.test.ts  setup.ts
api/: alerts.test.ts  alerts.ts  healthz.test.ts  model-status.test.ts  model-status.ts  package.json  predictions.test.ts  predictions.ts  readyz.test.ts  tsconfig.json
app/: app-content.tsx  dashboard.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page-layout.tsx  page.tsx  providers.tsx
app/[[...slug]]/: page.tsx
app/lib/: api.ts  (+3 more)
client/: index.html
components/: AnimatedProgress.tsx  CellularAutomataBackground.tsx  FloatingBetSlip.tsx  GameFutureCard.tsx  MobileBottomNav.tsx  Navigation.tsx  Onboarding.tsx
contracts/: README.md
coverage/: index.html
crates/el-api/: Cargo.toml
crates/el-api/src/: main.rs
crates/el-api/src/handlers/: genesis.rs  kelly.rs  mod.rs  nfl.rs  nfl_goat.rs  odds.rs  predictions.rs
crates/el-core/: Cargo.toml
crates/el-core/src/: arbitrage.rs  lib.rs  odds.rs
crates/el-feed/: Cargo.toml
crates/el-feed/src/: balldontlie.rs  lib.rs
crates/genesis/: Cargo.toml
crates/genesis/src/: lib.rs  simulation.rs  topology.rs  trajectory.rs
docs/: ARCHITECTURE_IMPLEMENTATION.md  BUILD_SUMMARY.md  CLEANUP_SUMMARY.md  DEPLOYMENT_STATUS.md  INTEGRATIONS.md  README.md  REPO_CLEANUP.md  STATUS.md  VERCEL_OPS.md  infra_proposal.md
lib/: api.ts  physics.ts  rate-limit.ts  telemetry.ts
page-components/: BettingPortal.tsx  Home.tsx  Landing.tsx  PoissonSim.tsx  Settings.tsx  SilasVex.tsx  WeeklyControl.tsx  data-page.tsx
pages/: index.js  index.tsx
platform/: README.md
public/: telemetry.json
python_engine/: __init__.py  api.py  backtester.py  balldontlie_connector.py  black_swan.py  chaos_physics.py  config.py  correlation_matrix.py  defensive_schemes.py  id_mapper.py  kelly_staking.py  market_analyzer.py  market_mechanics.py  monte_carlo.py  neural_predictor.py  nflverse_connector.py  prop_warfare.py  psychological_edge.py  run.py  sentiment_scraper.py  singularity_config.py  stats_sources.py  test_integration.py  unified_data_engine.py  vector_schema.py
requirements/: Epic_Analytics_Management.md
script/: build.ts
scripts/: TYPESCRIPT_FIX_REPORT.txt  auto-validate-fix.cjs  auto-validate-fix.ts  env-doctor.ts  generate-sdk.ts  github-push.ts  inspect-postcss.mjs  quick-fix.cjs  serve-control-room.js  validate-production.ts  validate-ts-files.ts  vercel-ops.ts
server/: db.ts  hono-app.ts  hono-routes.ts  importHistoricalData.ts  index.ts  next.ts  routes.ts  seed.ts  singularity-config.ts  static.ts  storage.ts
services/engine-core/: .gitignore  Cargo.toml  Makefile  README.md
services/engine-core/src/: arbitrage.rs  kelly.rs  lib.rs  main.rs
services/executioner/: Cargo.toml
services/executioner/src/: main.rs
services/oracle/: Cargo.toml  index.ts
services/oracle/src/: main.rs
services/sentinel/: Cargo.toml
services/sentinel/src/: main.rs
shared/: schema.ts
styles/: globals.css
trigger/: simulation.ts
(+595 files in other folders)
