[package]
name = "el-feed"
version.workspace = true
edition.workspace = true

[dependencies]
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
