[package]
name = "genesis"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
csv = "1.3"
ndarray = "0.15"

[lib]
name = "genesis"
path = "src/lib.rs"
