[package]
name = "executioner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "executioner"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

el-core = { path = "../../crates/el-core" }
el-feed = { path = "../../crates/el-feed" }
