[package]
name = "oracle"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

el-brain = { path = "../../crates/el-brain" }
el-core = { path = "../../crates/el-core" }
el-feed = { path = "../../crates/el-feed" }
