[package]
name = "sentinel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
chromiumoxide = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

el-feed = { path = "../../crates/el-feed" }
